# xdg-user-dirs-gtk

./: README  README.md  config.h  configure.ac  meson.build  org.gnome.XdgUserDirsGtk.json
data/: meson.build  org.gnome.XdgUserDirsGtk.appdata.xml.in  org.gnome.XdgUserDirsGtk.desktop.in  org.gnome.XdgUserDirsGtk.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  xdg-user-dirs-gtk-application.c  xdg-user-dirs-gtk-application.h  xdg-user-dirs-gtk-window.c  xdg-user-dirs-gtk-window.h  xdg-user-dirs-gtk-window.ui  xdg-user-dirs-gtk.gresource.xml
